--- a/stylesheet.less
+++ b/stylesheet.less
@@ -803,7 +803,7 @@ div.widget .extendednavigation ul li, div.widget.extendednavigation ul li {
 	height: 450px;
 }
 
-.main .widget {
+.main .widget:not(.row) {
 	margin-bottom: 15px;
 }
 
